code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__memories_inline_editor.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Memories › Edit memory ───────────────────────────────────────────────────────────────────────────
                                                                                                    
  Personal memories · Memories off                                                                  
                                                                                                    
  Title                                                                                             
  Fixture decision                                                                                  
                                                                                                    
> Content                                                                                           
  Use Rust                                                                                          
  保 留   两 个 空 格                                                                                     
                                                                                                    
                                                                                                    
                                                                                                    
  Tab fields · Ctrl+S save · Esc back
