code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__memories_search_results.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── Memories ─────────────────────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│   Personal    Projects                                                  │          │  
  │  ▝▜████▛│                                                                         │          │  
  │    ▝  ▘ │  + New Memory                                                           │          │  
  │         │                                                                         │          │  
  │         │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ Rust                                                               │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │> Rust decision 0    Keep shared behavior in     User maintained · 11-14 │          │  
  │         │  Rust decision 1    Keep shared behavior in     User maintained · 11-14 │          │  
  ╰─────────│  Rust decision 2    Keep shared behavior in     User maintained · 11-14 │──────────╯  
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │ Esc return  
  ──────────│  Enter view · n new · a actions · Tab tabs · / search · Esc close       │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
